

Revision History:
27-Jun-2004
   Thanks to Fabrizio Giustina for adding an entity-resolver to support local use of ServletUnit with a regular web.xml

   Additions:
       1. patch #915296: Local copies of the 2.2 and 2.3 web.xml dtds are now consulted if specified, rather than connecting to
          the Sun website.

24-Jun-2004
   Problems fixed:
       1. bug #978770 Clicking on a button outside of a form is now supported
       2. bug #838947 Document.getElementById now returns null if no such element exists

23-Jun-2004
   Problems fixed:
       1. bug #974380 When using a DNS listener, host header no longer includes ':-1' if the port is not specified

22-Jun-2004
   Problems fixed:
       1. bug #964940 The Referer header was not being sent again if the original request was redirected

21-Jun-2004
   Problems fixed:
       1. bug #974675 Javascript function Window.open did not honor "_self" tag for window name.

18-Jun-2004
   Additions:
       1. Enhanced http logging to show target server, request header line, and received URL

15-Jun-2004
   Thanks to Phil Zampino for finding a fixing a problem in PseudoServer's handling of very long requests.

   Problems fixed:
        1. PseudoServer would hang when sent a very long request.

13-Jun-2004
   Problems fixed:
        1. bug #737167: Nested frame names are now as specified, previous included names of parent frames.
        2. Return from a request that wrote to a new frame is now the result of that request, was the original page.
        3. Return from a request specifying an unknown frame now opens a new window; previously created a subframe
           in the requesting window.

 3-Jun-2004
   Additions:
        1. WebForm now supports the newUnvalidatedRequest method, which should be used in preference to
           HttpUnitOptions.setParametersValidated( false ). This creates a web request copied from the form
           but not tied to it, so that parameters can be set without validation.
